--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6",
-    "use-immer": "^0.9.0"
+    "use-immer": "^0.9.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.2"
   }
 }
